syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.soldadoservicegrpc.grpc";

service soldadoService{
  rpc getOneByID(idSoldado) returns (SoldadoObject){}
  rpc getAll(EmptySoldado) returns (SoldadoList){}
}
message idSoldado{
  int64 id = 1;
}

message SoldadoObject{
  int64 id = 1;
  string nombre = 2;
  string apellido = 3;
  string grado = 4;
  int32 status = 5;
}

message EmptySoldado{

}

message SoldadoList{
  repeated SoldadoObject soldado = 1;
}